html basics step 1 done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <h2>This is a subheading</h2>
     <p>This is text inside a paragraph.</p>
     <a href="https://google.com">Go to Google </a>
+    <p>This is text inside a paragraph.</p>
+    <img src="https://picsum.photos/200" alt="random image">
+    <ul>
+        <li>apple</li>
+        <li>banana</li>
+    </ul>
+    <ol>
+        <li>first</li>
+        <li>second</li>
+    </ol>
+    <b>bold</b><i>italic</i>
 
   </body>
 </html>
