basics html tags practise

--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My First Web Page</title>
+    <title>Charan's Portfolio</title>
   </head>
   <body>
-    <h1>Hello, World! 👋</h1>
-    <p>This is my first HTML page.</p>
-    <h2>This is a subheading</h2>
-    <p>This is text inside a paragraph.</p>
-    <a href="https://google.com">Go to Google </a>
-    <p>This is text inside a paragraph.</p>
-    <img src="https://picsum.photos/200" alt="random image">
-    <ul>
-        <li>apple</li>
-        <li>banana</li>
-    </ul>
-    <ol>
-        <li>first</li>
-        <li>second</li>
-    </ol>
-    <b>bold</b><i>italic</i>
+    <header>
+      <h1>Hello, I’m Charan 👋</h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contacts">Contact</a>
+      </nav>
+    </header>
+    
+    <main>
+      <section id="about">
+        <h2>About me</h2>
+        <p>I'm a web developer passionate about mern stack.</p>
+      </section>
+
+      <section id="projects">
+        <h2>projects</h2>
+        <article>
+          <h3>Job portel AI</h3>
+          <p>An intelligent resume analysis platform that matches jobs globally.</p>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>© 2025 Charan Ramagiri</p>
+    </footer>
+
+
+
+
+
+
+
+    <!-- <p>Welcome to my portfolio website.</p>
+    <p>This is a paragraph of text.</p>
+    <strong>Bold text</strong>
+    <em>Italic text</em>
+    <mark>Highlighted text</mark> -->
 
   </body>
 </html>
