corrected mistakes in portfolio_skeloton

--- a/HTML/portfolio_skeleton.html
+++ b/HTML/portfolio_skeleton.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
+        <title>Charan Ramagiri | Portfolio</title>
     </head>
     <body>
         <header>
@@ -13,10 +13,10 @@
             </nav>
         </header>
         <main>
-            <secton id="about">
+            <section id="about">
                 <h2>About me</h2>
                 <p>I am a 4th-year B.Tech student passionate about building full-stack applications.</p>
-            </secton>
+            </section>
 
             <section id="projects">
                 <h2>projects</h2>
@@ -26,7 +26,7 @@
                 </article>
             </section>
 
-            <section id="contacts">
+            <section id="contact">
                 <h2>Contact</h2>
                 <form>
                     <label for="email">Email:</label>
