--- a/HTML/portfolio_skeleton.html
+++ b/HTML/portfolio_skeleton.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Charan Ramagiri | Portfolio</title>
+        <link rel="stylesheet" href="../CSS/style1.css">
     </head>
     <body>
         <header>
@@ -21,7 +22,7 @@
             <section id="projects">
                 <h2>projects</h2>
                 <article>
-                    <h3>Ai Job matcher</h3>
+                    <h3 style="color:blue; text-align: center;">Ai Job matcher</h3>
                     <p>An intelligent resume analyzer that connects users to global job portals</p>
                 </article>
             </section>
