--- a/TASKS/Task1/index.html
+++ b/TASKS/Task1/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <h1>AI in Job Matching Platforms</h1>
-        <address>By Charan Ramagiri | October 2025</address>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Articles</a>
+            <a href="#">Projects</a>
+            <a href="#">Contacts</a>
+        </nav>
     </header>
     <main>
         <article>
@@ -49,7 +54,13 @@
                 <li><a href="#">Understanding Semantic HTML</a></li>
             </ul>
         </aside>
+        <div class="card-container">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+        </div>
     </main>
+
     
     <footer>
       <p>© 2025 Charan Ramagiri | Blog on AI & Web Development</p>
